@@ -16,3 +16,20 @@ styles["fh_deep_frame"] = {
     -- right_margin = 8,
     -- bottom_margin = 4
 }
+
+-- In order to override the logic for an entity just add their name pointing to a remote interface in your own mod:
+-- data.raw["mod-data"]["fh_add_items_hooks"].data.drop_target["assembling-machine-3"] = {"my_mod", "my_function"}
+data:extend {
+    {
+        type = "mod-data",
+        name = "fh_add_items_hooks",
+        data = { drop_target = {}, pickup_target = {} },
+    },
+}
+-- In your remote interface you will receive the entity. An array of items should be returned.
+-- Items are allowed to be in several formats. See fh_util for details. Some examples are:
+-- * Item name
+-- * Item runtime prototype
+-- * { name = <item name> }
+-- * { name = <item name>, quality = <quality or quality name> }
+-- Note: your mod becomes responsible for ALL suggestions for that entity, like burn results and spoilage.
