@@ -4,6 +4,7 @@ Date: ????
   Changes:
     - Added spoiled ingredients to output inserters
     - Support for ignoring entities with "no-automated-item-" for inserters
+    - Added mod hooks on specific entity interactions
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.21
 Date: 2025-10-03
